[tool.poetry]
name = "scheduler-bot"
version = "0.1.0"
description = ""
authors = ["Alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = ">=4.12.2"
aiofiles = "23.1.0"
aiogram = "2.25.1"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "4.6.0"
apscheduler = "3.10.4"
async-timeout = "4.0.3"
asyncio = "3.4.3"
attrs = "24.2.0"
babel = "2.9.1"
billiard = "4.2.1"
build = "1.2.2.post1"
cachecontrol = "0.14.0"
celery = "5.4.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
frozenlist = "1.4.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
kombu = "5.4.2"
magic-filter = "1.0.12"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
prompt-toolkit = "3.0.48"
propcache = "0.2.0"
ptyprocess = "0.7.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyproject-hooks = "1.2.0"
pytelegrambotapi = "4.23.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-telegram-bot = "21.6"
pytz = "2024.2"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.0"
redis = "5.1.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.16"
tzdata = "2024.2"
tzlocal = "5.2"
urllib3 = "2.2.3"
vine = "5.1.0"
virtualenv = "20.27.0"
wcwidth = "0.2.13"
yarl = "1.15.0"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
